add isJoined